Fix background bleed on short pages

--- a/sass/alexis.sass
+++ b/sass/alexis.sass
@@ -18,9 +18,12 @@
   box-sizing: border-box
 
 
+html
+  background: hsl(210, 20%, 22%)
+
 body
   background: hsl(220, 20%, 20%)
-  background: linear-gradient(0deg, hsl(210, 20%, 22%), hsl(210, 20%, 18%))
+  background: linear-gradient(0deg, hsl(210, 20%, 22%), hsl(210, 20%, 18%)) repeat-x
   color: hsl(210, 20%, 90%)
   font-family: 'lato',sans-serif
   font-weight: 300
